# markdown-tools

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  REUSE.toml  apply-clang-format.sh  codecov.yml  conanfile.py  config.xml.in  index.html  markdown-tools.desktop  package.xml.in  roadmap.md  test.render.bat
.github/workflows/: codeql-analysis.yml  deploy_linux.yml  deploy_mac.yml  deploy_win.yml  obs-trigger.yml  testing.yml
.reuse/: dep5
LICENSES/: LicenseRef-LGPL.txt  LicenseRef-MICROSOFT-SOFTWARE-LICENSE.txt
cmake/: FindImageMagick.cmake  Findresvg.cmake
css/: glide.core.css  glide.theme.css
doc/: Doxyfile
installer/config/: config.xml
script/: aqt.config  aqt.ini  qt.arch.win
script/linux/: build.sh  build_deploy.sh  deploy.sh  install-kde.sh  install-qt.sh
script/macos/: build.sh  build_deploy.sh  clean.sh  deploy.sh  install-kde.sh  install-qt.sh
script/windows/: build-debug.bat  build.bat  build_deploy.bat  clean-debug.bat  clean.bat  copy-binaries-debug.bat  copy-binaries.bat  copy-openssl.bat  copy-qt.bat  deploy.bat  install-extra-cmake-modules.bat  install-kde-debug.bat  install-kde.bat  install-openssl.bat  install-qt.bat  md-pdf-gui.bat
src/: CMakeLists.txt
src/converter/: CMakeLists.txt  cfg.cfgconf  const.h  const.hpp  converter_starter.cpp  launcher.cpp  main.cpp  main_window.cpp  main_window.h  main_window.hpp  main_window.ui  podofo_paintdevice.cpp  podofo_paintdevice.h  podofo_paintdevice.hpp  progress.cpp  progress.h  progress.hpp  progress.ui  renderer.cpp  renderer.h  renderer.hpp  resources.qrc  settings.cpp  settings.h  settings.ui  skia_paintdevice.cpp  skia_paintdevice.h  syntax-data.qrc  syntax.cpp  syntax.h  syntax.hpp  version.h.in  version.hpp.in
src/converter/svg/: go-jump.svgz
src/editor/: CMakeLists.txt  cfg.cfgconf  closebutton.cpp  closebutton.h  closebutton.hpp  colors.cpp  colors.h  colors.hpp  colors.ui  colorsdlg.cpp  colorsdlg.h  colorsdlg.hpp  colorsdlg.ui  const.h  editor.cpp  editor.h  editor.hpp  editor_settings.cpp  editor_settings.h  editor_settings.ui  emoji.h  find.cpp  find.h  find.hpp  find.ui  findweb.cpp  findweb.h  findweb.hpp  findweb.ui  font.cpp  font.h  font.hpp  font.ui  fontdlg.cpp  fontdlg.h  fontdlg.hpp  fontdlg.ui  gotoline.cpp  gotoline.h  gotoline.hpp  (+46 more)
src/editor/res/: highlight.js  hightlight-blockquote.js  index.html
src/editor/res/css/: github-markdown.css
src/shared/: CMakeLists.txt  color.cpp  color.h  color_widget.cpp  color_widget.h  color_widget.hpp  dlg_filter_wheel.cpp  dlg_filter_wheel.h  emoji.h  emoji_parser.cpp  emoji_parser.h  emphasis.cpp  emphasis.h  fingergeometry.cpp  fingergeometry.h  folder_chooser.cpp  folder_chooser.h  folder_chooser.hpp  icon.qrc  license_dialog.cpp  license_dialog.h  license_dialog.hpp  license_dialog.ui  md.h  plugins_page.cpp  plugins_page.h  plugins_page.ui  qt.qrc  switch.cpp  switch.h  syntax.cpp  syntax.h  tr.qrc  utils.cpp  utils.h  utils.hpp  version.h.in
src/shared/icon/md-dark/: index.theme
src/shared/pics/md/: index.theme
src/shared/tr/: md_ru.qm
src/utils/: CMakeLists.txt  diff.cpp  diff.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/test_render/: CMakeLists.txt  blockquote.md.data  blockquote.md_big.data  code.md.data  complex.md.data  complex.md_big.data  complex2.md_big.data  complex3.md.data  complex3.md_big.data  different_placing_cases.md.data  footnote2.md.data  footnote2.md_big.data  footnote3.md.data  footnote3.md_big.data  footnotes.md.data  footnotes.md_big.data  footnotes4.md.data  footnotes4.md_big.data  highlighted_quotes.md.data  highlighted_quotes.md_big.data  image_in_text.md.data  image_in_text.md_big.data  images_placing.md.data  links.md.data  links.md_big.data  main.cpp  math.md.data  math.md_big.data  styles.md.data  styles.md_big.data  table.md.data  table.md_big.data  table2.md.data  table2.md_big.data  tasklist.md.data  tasklist.md_big.data  test_const.h.in  test_const.hpp.in
tests/auto/test_syntax_cache/: CMakeLists.txt  main.cpp  test_data_path.hpp.in
tests/auto/test_utils/: CMakeLists.txt  main.cpp
tests/manual/: blockquote.md  code.md  complex2.md  complex3.md  different_placing_cases.md  footnote2.md  footnote3.md  footnotes.md  footnotes4.md  highlighted_quotes.md  image_in_text.md  images_placing.md  links.md  math.md  styles.md  table.md  table2.md  tasklist.md  word.md
translate/: md_ru.ts
utils/emoji/: CMakeLists.txt  emoji.json.license  main.cpp
win_cmake/: FindFLEX.cmake
